# rosbag2

.github/workflows/: lint.yml  test.yml
ros2bag/: package.xml  setup.py
ros2bag/ros2bag_backport/command/: bag.py
ros2bag/ros2bag_backport/verb/: convert.py  info.py  list.py  play.py  record.py
rosbag2/: CMakeLists.txt  package.xml
rosbag2_compression/: CMakeLists.txt  package.xml
rosbag2_compression/include/rosbag2_compression/: sequential_compression_reader.hpp
rosbag2_compression/include/rosbag2_compression_backport/: base_compressor_interface.hpp  (+3 more)
rosbag2_compression_zstd/: CMakeLists.txt  package.xml  plugin_description.xml
rosbag2_cpp/: CMakeLists.txt  package.xml
rosbag2_cpp/include/rosbag2_cpp/: reader.hpp  reindexer.hpp  writer.hpp
rosbag2_cpp/include/rosbag2_cpp/reader_interfaces/: base_reader_interface.hpp  filtered_reader_interface.hpp  metadata_reader_interface.hpp  multiple_bag_opener_interface.hpp  single_bag_opener_interface.hpp
rosbag2_cpp/include/rosbag2_cpp/readers/: aggregate_reader.hpp  merged_reader.hpp  sequential_reader.hpp
rosbag2_cpp/include/rosbag2_cpp/writer_interfaces/: base_writer_interface.hpp
rosbag2_cpp/include/rosbag2_cpp/writers/: sequential_writer.hpp
rosbag2_cpp/include/rosbag2_cpp_backport/: converter.hpp  info.hpp  reader.hpp  reindexer.hpp  serialization_format_converter_factory.hpp  serialization_format_converter_factory_interface.hpp  storage_options.hpp  types.hpp  typesupport_helpers.hpp  writer.hpp
rosbag2_cpp/include/rosbag2_cpp_backport/cache/: cache_buffer_interface.hpp  cache_consumer.hpp  circular_message_cache.hpp  message_cache.hpp  message_cache_buffer.hpp  message_cache_circular_buffer.hpp  message_cache_interface.hpp
rosbag2_cpp/include/rosbag2_cpp_backport/clocks/: player_clock.hpp  time_controller_clock.hpp
rosbag2_cpp/include/rosbag2_cpp_backport/converter_interfaces/: serialization_format_converter.hpp  serialization_format_deserializer.hpp  serialization_format_serializer.hpp
rosbag2_cpp/include/rosbag2_cpp_backport/reader_interfaces/: base_reader_interface.hpp
rosbag2_cpp/include/rosbag2_cpp_backport/readers/: sequential_reader.hpp
rosbag2_cpp/include/rosbag2_cpp_backport/types/: introspection_message.hpp
rosbag2_cpp/include/rosbag2_cpp_backport/writer_interfaces/: base_writer_interface.hpp
rosbag2_cpp/include/rosbag2_cpp_backport/writers/: sequential_writer.hpp
rosbag2_cpp/src/rosbag2_cpp/: compression_options.cpp  converter.cpp  info.cpp  reader.cpp  reindexer.cpp  rmw_implemented_serialization_format_converter.cpp  rmw_implemented_serialization_format_converter.hpp  serialization_format_converter_factory.cpp  serialization_format_converter_factory_impl.hpp  typesupport_helpers.cpp  writer.cpp
rosbag2_cpp/src/rosbag2_cpp/cache/: cache_consumer.cpp  circular_message_cache.cpp  message_cache.cpp  message_cache_buffer.cpp  message_cache_circular_buffer.cpp
rosbag2_cpp/src/rosbag2_cpp/clocks/: time_controller_clock.cpp
rosbag2_cpp/src/rosbag2_cpp/readers/: aggregate_reader.cpp  merged_reader.cpp  sequential_reader.cpp
rosbag2_cpp/src/rosbag2_cpp/types/: introspection_message.cpp
rosbag2_cpp/src/rosbag2_cpp/writers/: sequential_writer.cpp
rosbag2_cpp/test/rosbag2_cpp/: converter_test_plugin.hpp  mock_cache_consumer.hpp  mock_converter.hpp  mock_converter_factory.hpp  mock_message_cache.hpp  mock_metadata_io.hpp  mock_storage.hpp  mock_storage_factory.hpp  serializer_test_plugin.hpp  test_circular_message_cache.cpp  test_compression_options.cpp  test_converter_factory.cpp  test_info.cpp  test_merge.cpp  test_message_cache.cpp  test_multifile_reader.cpp  test_sequential_reader.cpp  test_sequential_writer.cpp  test_storage_without_metadata_file.cpp  test_time_controller_clock.cpp  test_typesupport_helpers.cpp
rosbag2_cpp/test/rosbag2_cpp/types/: test_ros2_message.cpp
rosbag2_interfaces/: CMakeLists.txt  package.xml
rosbag2_performance/rosbag2_performance_benchmarking/: CMakeLists.txt  package.xml
rosbag2_py/: CMakeLists.txt  package.xml
rosbag2_py/rosbag2_py_backport/: __init__.py
rosbag2_py/test/: common.py  test_convert.py  test_reindexer.py  test_sequential_reader.py  test_sequential_reader_multiple_files.py  test_sequential_writer.py  test_transport.py
rosbag2_storage/: CMakeLists.txt  package.xml
rosbag2_storage_default_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
rosbag2_storage_evaluation/: CMakeLists.txt
rosbag2_test_common/: CMakeLists.txt  package.xml
rosbag2_tests/: CMakeLists.txt  package.xml
rosbag2_transport/: CMakeLists.txt  package.xml
rosbag2_transport/include/rosbag2_transport/: player.hpp  recorder.hpp
rosbag2_transport/include/rosbag2_transport_backport/: bag_rewrite.hpp  generic_publisher.hpp  generic_subscription.hpp  player.hpp  qos.hpp  reader_writer_factory.hpp  record_options.hpp  recorder.hpp  typesupport_helpers.hpp
rosbag2_transport/rosbag2_transport/: __init__.py
rosbag2_transport/src/rosbag2_transport/: bag_rewrite.cpp  generic_publisher.cpp  generic_subscription.cpp  player.cpp  qos.cpp  reader_writer_factory.cpp  record_options.cpp  recorder.cpp  rosbag2_transport.cpp  topic_filter.cpp  topic_filter.hpp  typesupport_helpers.cpp
rosbag2_transport/test/rosbag2_transport/: mock_player.hpp  mock_sequential_reader.hpp  mock_sequential_writer.hpp  record_integration_fixture.hpp  rosbag2_play_test_fixture.hpp  rosbag2_transport_test_fixture.hpp  test_keyboard_controls.cpp  test_play.cpp  test_play_for_the_next.cpp  test_play_loop.cpp  test_play_next.cpp  test_play_publish_clock.cpp  test_play_seek.cpp  test_play_services.cpp  test_play_timing.cpp  test_play_topic_remap.cpp  test_qos.cpp  test_record.cpp  test_record_all.cpp  test_record_all_ignore_leaf_topics.cpp  test_record_all_no_discovery.cpp  test_record_options.cpp  test_record_regex.cpp  test_record_services.cpp  test_rewrite.cpp
shared_queues_vendor/: CMakeLists.txt  package.xml
sqlite3_vendor/: CMakeLists.txt  package.xml  sqlite3_vendor-extras.cmake
zstd_vendor/: CMakeLists.txt  package.xml  zstd_vendor-extras.cmake
(+89 files in other folders)
