<?xml version="1.0"?>
<package format="2">
  <name>rosbag2_future</name>
  <version>0.6.0</version>
  <description>Meta package for rosbag2 related packages</description>
  <maintainer email="karsten@openrobotics.org">Karsten Knese</maintainer>
  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>
  <conflict>rosbag2</conflict>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2bag_future</exec_depend>
  <exec_depend>rosbag2_compression_future</exec_depend>
  <exec_depend>rosbag2_cpp_future</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  <exec_depend>rosbag2_storage_future</exec_depend>
  <exec_depend>rosbag2_transport_future</exec_depend>
  <exec_depend>shared_queues_vendor_future</exec_depend>

  <!-- Default plugins -->
  <exec_depend>rosbag2_compression_zstd_future</exec_depend>
  <exec_depend>rosbag2_storage_default_plugins_future</exec_depend>
  <exec_depend>sqlite3_vendor</exec_depend>

  <test_depend>rosbag2_test_common_future</test_depend>
  <test_depend>rosbag2_tests_future</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
