<?xml version="1.0"?>
<package format="2">
  <name>rosbag2_backport</name>
  <version>0.12.0</version>
  <description>Meta package for rosbag2 related packages</description>
  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <maintainer email="me@emersonknapp.com">Emerson Knapp</maintainer>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2bag_backport</exec_depend>
  <exec_depend>rosbag2_compression_backport</exec_depend>
  <exec_depend>rosbag2_cpp_backport</exec_depend>
  <exec_depend>rosbag2_py_backport</exec_depend>
  <exec_depend>rosbag2_storage_backport</exec_depend>
  <exec_depend>rosbag2_transport_backport</exec_depend>
  <exec_depend>shared_queues_vendor_backport</exec_depend>

  <!-- Default plugins -->
  <exec_depend>rosbag2_compression_zstd_backport</exec_depend>
  <exec_depend>rosbag2_storage_default_plugins_backport</exec_depend>
  <exec_depend>sqlite3_vendor_backport</exec_depend>

  <test_depend>rosbag2_test_common_backport</test_depend>
  <test_depend>rosbag2_tests_backport</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
