<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rosbag2_transport_future</name>
  <version>0.6.0</version>
  <description>Layer encapsulating ROS middleware to allow rosbag2 to be used with or without middleware</description>
  <maintainer email="karsten@openrobotics.org">Karsten Knese</maintainer>
  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
  <maintainer email="ros-tooling@googlegroups.com">ROS Tooling Working Group</maintainer>
  <license>Apache License 2.0</license>
  <conflict>rosbag2_transport</conflict>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>python_cmake_module</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_compression_future</depend>
  <depend>rosbag2_cpp_future</depend>
  <depend>rosbag2_storage_future</depend>
  <depend>rmw</depend>
  <depend>rpyutils</depend>
  <depend>shared_queues_vendor_future</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>
  <test_depend>rosbag2_test_common_future</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
